# assignment-1-individual-work-FouadBellili

./: README.md  main.py  pyproject.toml
data/bronze/anr_appels/: appel_0001.html  appel_0002.html  appel_0003.html  appel_0004.html  appel_0005.html  appel_0006.html  appel_0007.html  appel_0008.html  appel_0009.html  appel_0010.html  appel_0011.html  appel_0012.html  appel_0013.html  appel_0014.html  appel_0015.html  appel_0016.html  appel_0017.html  appel_0018.html  appel_0019.html  appel_0020.html  appel_0021.html  appel_0022.html  appel_0023.html  appel_0024.html  appel_0025.html  appel_0027.html  appel_0028.html
data/bronze/ua_news/: article_0001.html  article_0002.html  article_0003.html  article_0004.html  article_0005.html  article_0006.html  article_0007.html  article_0008.html  article_0009.html  article_0010.html  article_0011.html  article_0012.html  article_0013.html  article_0014.html  article_0015.html  article_0016.html  article_0017.html  article_0018.html  article_0019.html  article_0020.html  article_0021.html  article_0022.html  article_0023.html  article_0024.html  article_0025.html  article_0026.html  article_0027.html  article_0028.html  article_0029.html  article_0030.html  article_0031.html  article_0032.html  article_0033.html  article_0034.html  article_0035.html  article_0036.html  article_0037.html  article_0038.html  article_0039.html  article_0040.html  (+11 more)
data/exports/: grants_20260317_172026.csv  grants_20260317_172026.json
data/silver/: jobs_and_news.db  ua_news.db
src/: analyzer.py  cli.py  parser.py  scheduler.py  scraper.py
(+55 files in other folders)
