[project]
name = "grant-scraper"
version = "0.1.0"
description = "UA Grant News Scraper — Data Engineering Assignment 1"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "schedule>=1.2",
    "lxml>=5.2",
]

[project.scripts]
grant-scraper = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]